# MetaBBO

./: .gitignore  README.md  analyse_actions.ipynb  pyproject.toml
metabbo/: __init__.py  config.py  logger.py  main.py  tester.py  trainer.py  utils.py
metabbo/agent/: __init__.py  basic_agent.py  networks.py  rlepso_agent.py  utils.py
metabbo/agent/symbol_related/: critic.py  expression.py  lstm.py  tokenizer.py  utils.py
metabbo/environment/: __init__.py  basic_environment.py
metabbo/optimizer/: __init__.py  basic_optimizer.py  learnable_optimizer.py  random_search.py  rlepso_optimizer.py
metabbo/optimizer/operators/: __init__.py  boundary_control.py  crossover.py  mutate.py
metabbo/problem/: __init__.py  basic_problem.py  bbob.py  protein_docking.py
